--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 GOOGLE_APPLICATION_CREDENTIALS="./credentials.json"
+CLIENT_ID="860319388232-tncb6kmkc4b3kuetlir6858k5o6u8k64.apps.googleusercontent.com"
+CLIENT_SECRET="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"
+REDIRECT_URI=http://localhost:3000/auth/google/callback
