--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "googleapis": "^105.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.7",
     "winston": "^3.11.0"
   }
 }
